tweak build.gradle.kts